@@ -1,7 +1,9 @@
 2.1.3
- - Bugfix in robusttransaction: forgot to set isolation level
+ - Makefile fixes for Visual C++, thanks Paresh Patel!
+ - Library ABI versioning implemented, thanks Roger Leigh!
  - Uses older isolation level syntax for compatibility, thanks koun@sina.com!
  - tablestreams can explicitly complete() before destructor
+ - Bugfix in robusttransaction: forgot to set isolation level
  - Fixed off-by-ones in tablewriter escape code
  - tablestreams now use \n-style escape sequences
  - tablestreams support octal numbers
